force-app/main/default/objects/Outbound_Contact__e.object
<CustomObject>
    <description>Publishes an event whenever core details of a contact changes. This is used:
1. To capture changes to Alumni Contacts to be picked up by MiX which in turn forwards to Monash Talent</description>
    <fields>
        <fullName>CRM_Id__c</fullName>
        <description>Unique CRM id for a contact</description>
        <label>CRM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates of the Contact is an Alumni</description>
        <label>Is Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates of a Contact is a student</description>
        <label>Is Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Record Id of the Contact</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Contact</label>
    <pluralLabel>Outbound Contacts</pluralLabel>
</CustomObject>